# vcd2wavedrom

./: .gitignore  Makefile  README.md  Verilog_VCD.py  example.vcd  exampleconfig.json  pyproject.toml  vcd2wavedrom.py  vcdvcd.py
vcd2wavedrom/: vcd2wavedrom.py
